Fixed on mobile

--- a/css/media-queries-subpages.css
+++ b/css/media-queries-subpages.css
@@ -1,11 +1,11 @@
 @media screen and (max-width: 1280px) {
-  .grid {
+  #grid {
     width: 70%;
   }
 }
 
 @media screen and (max-width: 800px) {
-  .grid {
+  #grid {
     width: 80%;
   }
   .item {
